fixed a couple of overlapping issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,14 @@
     background-image: url(/images/logo1.png);
     background-position: 0 0;
     background-repeat: no-repeat;
+    z-index: 0;
 }
 
 .buttonWrapper{
     position: relative;
     text-align: center;
     vertical-align: middle;
+    z-index: 1;
 }
 
 .button {
@@ -82,7 +84,8 @@ html,
         background-size: 50%;
 		margin: 0;
 		overflow: hidden;
-		height: 100%;
+        height: 100%;
+        z-index: -1;
     }
     
     input {
